--- a/.classpath
+++ b/.classpath
@@ -3,8 +3,8 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="lib/jcommon-1.0.0-rc1.jar"/>
-	<classpathentry kind="lib" path="lib/jfreechart-1.0.0-rc1.jar"/>
 	<classpathentry kind="lib" path="lib/jfreechart-1.5.3.jar"/>
 	<classpathentry kind="lib" path="lib/org.jfree.chart.fx-2.0.1.jar"/>
+	<classpathentry kind="lib" path="org.jfree.fxgraphics2d-2.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
