--- a/.classpath
+++ b/.classpath
@@ -1,15 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk-11.0.17"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX19">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="lib/jcommon-1.0.0-rc1.jar"/>
-	<classpathentry kind="lib" path="lib/jfreechart-1.5.3.jar"/>
-	<classpathentry kind="lib" path="lib/org.jfree.chart.fx-2.0.1.jar"/>
-	<classpathentry kind="lib" path="org.jfree.fxgraphics2d-2.1.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart-1.0.0-rc1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
